Added profile image functionality

--- a/HTMLFiles/output.html
+++ b/HTMLFiles/output.html
@@ -4,6 +4,9 @@
     </div>
     <form class="row">
         <div class="col-12 input-group my-1">
+            <img class="border m-auto" alt="Profile picture" id="profile-pic-preview" width="200">
+        </div>
+        <div class="col-12 input-group my-1">
             <span class="input-group-text">Name: </span>
             <input type="text" name="name" id="name" class="border shadow-none form-control" readonly />
         </div>
