--- a/HTMLFiles/update.html
+++ b/HTMLFiles/update.html
@@ -172,6 +172,15 @@
                 <div class="invalid-feedback" id="invalid-dob"></div>
             </div>
         </div>
+        <div class="col-12 input-group my-1">
+            <img class="border m-auto" alt="Profile picture" id="profile-pic-preview" width="200">
+        </div>
+        <div class="col-12 input-group my-1">
+            <span class="input-group-text">Profile pic: </span>
+            <input type="file" name="profile-pic" id="profile-pic" class="border shadow-none form-control"
+                accept="image/*" />
+            <div class="invalid-feedback" id="invalid-profile-pic"></div>
+        </div>
         <hr class="mt-3">
         <h6 class="text-danger">IN CASE OF EMERGENCY PLEASE NOTIFY</h6>
         <div class="col-12 input-group my-1">
